--- a/login.html
+++ b/login.html
@@ -18,6 +18,40 @@
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   </head>
 
+  <style>
+    .modal {
+    display: none; 
+    position: fixed; 
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);
+  }
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+  }
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  </style>
+
   <body>
   
     <!-- wpf Loader Two -->
@@ -101,7 +135,7 @@
                 <div class="">
                   <div class="aa-myaccount-login">
                     <h4>Login</h4>
-                    <form action="" class="aa-login-form">
+                    <form action="" class="aa-login-form" onsubmit="return false">
                       <label for="">Name<span>*</span></label>
                       <input type="text" placeholder="Name">
                       <label for="">Mobile Number<span>*</span></label>
@@ -110,8 +144,15 @@
                       <input type="text" placeholder="Username or Email">
                       <label for="">Password<span>*</span></label>
                       <input type="password" placeholder="Password">
-                      <button type="submit" class="aa-browse-btn">Login</button>
+                      <button type="submit" class="aa-browse-btn" id="myBtn">Login</button>
                       <label class="rememberme" for="rememberme"><input type="checkbox" id="rememberme"> Remember Me </label>
+                      <div id="myModal" class="modal">
+                        <div class="modal-content">
+                          <span class="close">&times;</span>
+                          <p>Thank You for login to our website. We are happy to have a such amazing customer and we are extremely happy to work for you. We assure you to provide the best service at anytime and anywhere. We hope to see you again soon.</p>
+                          <p><strong>Team CollegeAdda</strong></p>
+                        </div>
+                      </div>
                     </form>
                   </div>
                 </div>
@@ -195,6 +236,22 @@
     <script type="text/javascript" src="js/slick.js"></script>
     <script type="text/javascript" src="js/nouislider.js"></script>
     <script src="js/custom.js"></script> 
-  
+    <script>
+      var modal = document.getElementById("myModal");
+      var btn = document.getElementById("myBtn");
+      var span = document.getElementsByClassName("close")[0];
+      btn.onclick = function() {
+        modal.style.display = "block";
+      }
+      span.onclick = function() {
+        modal.style.display = "none";
+      }
+      window.onclick = function(event) {
+        if (event.target == modal) {
+          modal.style.display = "none";
+        }
+      }
+    </script>
+
   </body>
 </html>
