--- a/selldonate.html
+++ b/selldonate.html
@@ -198,7 +198,7 @@
                       <div id="myModal" class="modal">
                         <div class="modal-content">
                           <span class="close">&times;</span>
-                          <p>Thank You for working with us. We'd like to let you know that we have received your product, and is under supervision. It will be updated in few hours. You will notify whenever we update your product on site. We hope to see you again soon.</p>
+                          <p>Thank You for working with us. We'd like to let you know that we have received your product, and is under supervision. It will be updated in few hours. You will be notify whenever we update your product on our website. We hope to see you again soon.</p>
                           <p><strong>Team CollegeAdda</strong></p>
                         </div>
                       </div>
