--- a/electronics.html
+++ b/electronics.html
@@ -153,6 +153,30 @@
                       </figcaption>
                     </figure>                          
                   </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="products/mp3player.html"><img src="img/electronics/mp3player.jpg" alt="mobile img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="products/mp3player.html">Philips GoGear Mix</a></h4>
+                        <span class="aa-product-price">Rs. 400</span>
+                        <p class="aa-product-descrip">Philips' innovative FullSound technology faithfully restores sonic details to compressed MP3 music, dramatically enriching and enhancing it, so you can experience CD music without any distortion.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1 Days</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
+                  <li>
+                    <figure>
+                      <a class="aa-product-img" href="products/kettle.html"><img src="img/electronics/kettle.jpg" alt="mobile img"></a>
+                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <figcaption>
+                        <h4 class="aa-product-title"><a href="products/kettle.html">Tandem Electric Kettle</a></h4>
+                        <span class="aa-product-price">Rs. 250</span>
+                        <p class="aa-product-descrip">Tandem is a part of a 20-year-old diversified Lifelong group. The company is committed to providing superior quality products across categories namely home, personal care, kitchen and wellness, at affordable prices.</p>
+                        <p class="aa-product-descrip">Expect Delivery in 1 Days</p>
+                      </figcaption>
+                    </figure>                          
+                  </li>
                 </ul>
               </div>
             </div>
