--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
     .typewriter {
       position: absolute;
       top: 50%;
-      left: 15%;
+      left: 20%;
     }
     .typewriter h1 {
-      color: #031d82;
-      font-family: "Raleway", sans-serif;
-      font-size: 400%;
+      color: #ffffff;
+      font-family: "Century Gothic", sans-serif;
+      font-size: 350%;
       font-weight: bolder;
       overflow: hidden; 
-      border-right: .15em solid #031d82; 
+      border-right: .15em solid #ffffff; 
       white-space: nowrap; 
       margin: 0 auto; 
-      letter-spacing: .15em;
+      /* letter-spacing: .15em; */
       animation: 
         typing 2s steps(30, end),
         blink-caret .5s step-end infinite;
@@ -145,15 +145,15 @@
             <ul class="seq-canvas">
               <li>
                 <div class="seq-model">
-                  <img data-seq class="texttyping" src="img/slider/1.jpg" alt="Company Banner img">
+                  <img data-seq class="texttyping" src="img/companybanner.jpg" alt="Company Banner img">
                   <div class="typewriter">
-                    <h1>Yeh Hai College Ki Dukaan!</h1>
+                    <h1>&ldquo;Yeh Hai College Ki Dukaan!&rdquo;</h1>
                   </div>
                 </div>
               </li>
               <li>
                 <div class="seq-model">
-                  <img data-seq src="img/slider/2.jpg" alt="Slide img">
+                  <img data-seq src="img/categories.jpg" alt="Slide img">
                 </div>
                 <div class="seq-title">
                   <h2 data-seq>Categories</h2>                
