--- a/selldonate.html
+++ b/selldonate.html
@@ -184,7 +184,7 @@
                           <option value="category3">Electronics</option>
                           <option value="category4">Rooms </option>
                           <option value="category5">Others</option>
-                        </select><br><br>7
+                        </select><br><br>
                         <label for="">Input Image</label><br>
                         <input type="file" id="" name="pic" accept="image/*"><br>
                       </div>
