--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link rel="stylesheet" type="text/css" href="css/nouislider.css">
     <link id="switcher" href="css/color/theme.css" rel="stylesheet">
     <link href="css/sequence-theme.modern-slide-in.css" rel="stylesheet" media="all">
-    <link href="css/style.css" rel="stylesheet">    
+    <link href="css/style.css" rel="stylesheet">  
+    <link rel="stylesheet" href="css/demo.css">
+    <link rel="stylesheet" href="css/graph.css">
     <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   </head>
@@ -152,11 +154,11 @@
               </li>
               <li>
                 <div class="seq-model">
-                  <img data-seq src="img/categories.jpg" alt="Slide img">
+                  <img data-seq src="img/categoriesbanner.jpg" alt="Slide img">
                 </div>
                 <div class="seq-title">
-                  <h2 data-seq>Categories</h2>                
-                  <p data-seq>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, illum.</p>
+                  <!-- <h2 data-seq>Categories</h2>                
+                  <p data-seq>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus, illum.</p> -->
                 </div>
               </li>
               <li>
@@ -453,6 +455,88 @@
       </div>
     </section>
 
+    <!-- Bar Graph -->
+    <div class="contain">
+      <header>
+        <h1>Product Availability</h1>
+      </header>
+      <section class="main">
+        <span class="button-label">Size:</span>
+        <input type="radio" name="resize-graph" id="graph-small" /><label for="graph-small">Small</label>
+        <input type="radio" name="resize-graph" id="graph-normal" checked="checked" /><label for="graph-normal">Normal</label>
+        <input type="radio" name="resize-graph" id="graph-large" /><label for="graph-large">Large</label>   
+        <span class="button-label">Color:</span>
+        <input type="radio" name="paint-graph" id="graph-blue" checked="checked" /><label for="graph-blue">Blue</label>
+        <input type="radio" name="paint-graph" id="graph-green" /><label for="graph-green">Green</label>
+        <input type="radio" name="paint-graph" id="graph-rainbow" /><label for="graph-rainbow">Rainbow</label>
+        <span class="button-label">Product:</span>
+        <input type="radio" name="fill-graph" id="f-none" /><label for="f-none">None</label>
+        <input type="radio" name="fill-graph" id="f-product1" checked="checked" /><label for="f-product1">Stationaries</label>
+        <input type="radio" name="fill-graph" id="f-product2" /><label for="f-product2">Electronics</label>
+        <input type="radio" name="fill-graph" id="f-product3" /><label for="f-product3">Rooms</label>
+        <ul class="graph-container">
+          <li>
+            <span>2008</span>
+            <div class="bar-wrapper">
+              <div class="bar-container">
+                <div class="bar-background"></div>
+                <div class="bar-inner">25</div>
+                <div class="bar-foreground"></div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <span>2009</span>
+            <div class="bar-wrapper">
+              <div class="bar-container">
+                <div class="bar-background"></div>
+                <div class="bar-inner">50</div>
+                <div class="bar-foreground"></div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <span>2010</span>
+            <div class="bar-wrapper">
+              <div class="bar-container">
+                <div class="bar-background"></div>
+                <div class="bar-inner">75</div>
+                <div class="bar-foreground"></div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <span>2011</span>
+            <div class="bar-wrapper">
+              <div class="bar-container">
+                <div class="bar-background"></div>
+                <div class="bar-inner">100</div>
+                <div class="bar-foreground"></div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <span>2012</span>
+            <div class="bar-wrapper">
+              <div class="bar-container">
+                <div class="bar-background"></div>
+                <div class="bar-inner">50</div>
+                <div class="bar-foreground"></div>
+              </div>
+            </div>
+          </li>
+          <li>
+            <ul class="graph-marker-container">
+              <li style="bottom:25%;"><span>25%</span></li>
+              <li style="bottom:50%;"><span>50%</span></li>
+              <li style="bottom:75%;"><span>75%</span></li>
+              <li style="bottom:100%;"><span>100%</span></li>
+            </ul>
+          </li>
+        </ul>
+      </section>
+    </div>
+
     <!-- Banner Section -->
     <section id="aa-banner">
       <div class="container">
@@ -559,13 +643,7 @@
     <script type="text/javascript" src="js/slick.js"></script>
     <script type="text/javascript" src="js/nouislider.js"></script>
     <script src="js/custom.js"></script> 
-    <!-- <script src="js/typed.js"></script>
-    <script>
-      var typed = new Typed('#texttyping', {
-        strings: ["swarggfgjk"],
-        typeSpeed: 30
-      });
-    </script> -->
+    <script src="js/modernizr.custom.04022.js"></script>
 
   </body>
 </html>
