--- a/others.html
+++ b/others.html
@@ -75,7 +75,7 @@
                 <li><a href="stationaries.html">Stationaries </a></li>
                 <li><a href="electronics.html">Electronics </a></li>
                 <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
-                <li><a href="others.html">Others </a></li>           
+                <li><a href="others.html">College </a></li>           
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="login.html">Login </a></li>
                 <li><a href="selldonate.html">Sell/Donate </a></li>
@@ -107,11 +107,10 @@
                 <ul class="list aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
-                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <a class="aa-product-img" href="#"><img src="img/college/uiethoshiarpur.jpg" alt="product img"></a>
+                      <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">This is Title</a></h4>
-                        <span class="aa-product-price">Rs. 100</span>
+                        <h4 class="aa-product-title"><a href="#">UIET Hoshiarpur</a></h4>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
@@ -119,10 +118,9 @@
                   <li>
                     <figure>
                       <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
-                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">Rs. 100</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
@@ -130,10 +128,9 @@
                   <li>
                     <figure>
                       <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
-                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">Rs. 100</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
@@ -141,10 +138,9 @@
                   <li>
                     <figure>
                       <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
-                      <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a>
+                      <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
-                        <span class="aa-product-price">Rs. 100</span>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                          
