--- a/stationaries.html
+++ b/stationaries.html
@@ -75,8 +75,8 @@
                 <li><a href="stationaries.html">Stationaries </a></li>
                 <li><a href="electronics.html">Electronics </a></li>
                 <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
-                <li><a href="others.html">Others </a></li>         
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="others.html">College </a></li>         
+                <li><a href="contact.html">Contact </a></li>
                 <li><a href="login.html">Login </a></li>
                 <li><a href="selldonate.html">Sell/Donate </a></li>
               </ul>
