--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     .texttyping {
       position: relative;
       text-align: center;
-      justify-content: center;
     }
     .typewriter {
       position: absolute;
@@ -191,7 +190,7 @@
                 <li><a href="stationaries.html">Stationaries </a></li>
                 <li><a href="electronics.html">Electronics </a></li>
                 <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
-                <li><a href="others.html">Others </a></li>          
+                <li><a href="others.html">College </a></li>          
                 <li><a href="contact.html">Contact </a></li>
                 <li><a href="login.html">Login </a></li>
                 <li><a href="selldonate.html">Sell/Donate </a></li>
