--- a/hostelpgrooms.html
+++ b/hostelpgrooms.html
@@ -201,7 +201,7 @@
                   <li><a href="stationaries.html">Stationaries</a></li>
                   <li><a href="electronics.html">Electronics</a></li>
                   <li><a href="hostelpgrooms.html">Hostel/PG Rooms</a></li>
-                  <li><a href="others.html">Others</a></li>
+                  <li><a href="others.html">College</a></li>
                 </ul>
               </div>
             </aside>
