--- a/others.html
+++ b/others.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-    <title>CollegeAdda | Others</title>
+    <title>CollegeAdda | College</title>
     <link href="css/font-awesome.css" rel="stylesheet">
     <link href="css/bootstrap.css" rel="stylesheet">   
     <link href="css/jquery.smartmenus.bootstrap.css" rel="stylesheet">
@@ -107,7 +107,7 @@
                 <ul class="list aa-product-catg">
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="img/college/uiethoshiarpur.jpg" alt="product img"></a>
+                      <a class="aa-product-img" href="#"><img src="img/college/uiethoshiarpur.jpg" alt="college img"></a>
                       <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">UIET Hoshiarpur</a></h4>
@@ -117,30 +117,30 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
+                      <a class="aa-product-img" href="#"><img src="#" alt="college img"></a>
                       <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
+                        <h4 class="aa-product-title"><a href="#">UIET Chandigarh</a></h4>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
+                      <a class="aa-product-img" href="#"><img src="#" alt="college img"></a>
                       <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
+                        <h4 class="aa-product-title"><a href="#">Chandigarh College of Engineering Technology</a></h4>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                         
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="#" alt="product img"></a>
+                      <a class="aa-product-img" href="#"><img src="#" alt="college img"></a>
                       <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
-                        <h4 class="aa-product-title"><a href="#">Lorem ipsum doller</a></h4>
+                        <h4 class="aa-product-title"><a href="#">Punjab Engineering College</a></h4>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
                       </figcaption>
                     </figure>                          
@@ -157,7 +157,7 @@
                   <li><a href="stationaries.html">Stationaries</a></li>
                   <li><a href="electronics.html">Electronics</a></li>
                   <li><a href="hostelpgrooms.html">Hostel/PG Rooms</a></li>
-                  <li><a href="others.html">Others</a></li>
+                  <li><a href="others.html">College</a></li>
                 </ul>
               </div>
             </aside>
