--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       padding: 30px 50px 50px 50px;
       margin: 0 auto 30px auto;
     }
-
   </style>
+
   <body> 
 
     <!-- wpf Loader Two -->
@@ -298,7 +298,7 @@
                       <div class="aa-promo-banner">                      
                         <img src="img/otherspromo.jpg" alt="img">                      
                         <div class="aa-prom-content">
-                          <h4><a href="others.html">Others</a></h4>                        
+                          <h4><a href="others.html">College</a></h4>                        
                         </div>
                       </div>
                     </div>
@@ -323,7 +323,7 @@
                     <li class="active"><a href="#men" data-toggle="tab">Stationaries</a></li>
                     <li><a href="#women" data-toggle="tab">Electronics</a></li>
                     <li><a href="#sports" data-toggle="tab">Rooms</a></li>
-                    <li><a href="#electronics" data-toggle="tab">Others</a></li>
+                    <!-- <li><a href="#electronics" data-toggle="tab">Others</a></li> -->
                   </ul>
                   <div class="tab-content">
                     <div class="tab-pane fade in active" id="men">
@@ -463,7 +463,7 @@
                       </ul>
                     </div>
                     <!-- Start Others Product Category -->
-                    <div class="tab-pane fade" id="electronics">
+                    <!-- <div class="tab-pane fade" id="electronics">
                       <ul class="row aa-product-catg">
                         <li class="col-lg-3 col-sm-6 col-12">
                           <figure>
@@ -507,7 +507,7 @@
                         </li>
                       </ul>
                       <a class="aa-browse-btn" href="others.html">Browse all Product <span class="fa fa-long-arrow-right"></span></a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
