--- a/products/catalysisnotes.html
+++ b/products/catalysisnotes.html
@@ -38,8 +38,8 @@
               <div class="aa-header-bottom-area">
                 <div class="aa-logo">
                   <a href="../index.html">
-                    <span class="fa fa-shopping-cart"></span>
-                    <p>College<strong>Adda</strong> <span>Yeh Hai College ki Dukaan!</span></p>
+                    <span class="companylogo"><img src="img/logo.jpg" width="60px" height="60px" alt="Logo" style="padding-bottom: 25px; box-sizing: border-box; height: 85px;"></span>
+                    <p style="margin-top: 0px;">College<strong>Adda</strong> <span>Yeh Hai College ki Dukaan!</span></p>
                   </a>
                 </div>
                 <div class="aa-search-box">
