--- a/others.html
+++ b/others.html
@@ -76,7 +76,7 @@
                 <li><a href="electronics.html">Electronics </a></li>
                 <li><a href="hostelpgrooms.html">Hostel/PG Rooms </a></li>
                 <li><a href="others.html">College </a></li>           
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="contact.html">Contact </a></li>
                 <li><a href="login.html">Login </a></li>
                 <li><a href="selldonate.html">Sell/Donate </a></li>
               </ul>
@@ -91,8 +91,173 @@
       <img src="img/othersbanner.jpg" alt="banner img">
     </section>
 
+    <!-- Photos -->
+    <section id="aa-promo">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="aa-promo-area">
+              <div class="row">
+                <div class="col-md-5 no-padding">                
+                  <div class="aa-promo-left">
+                    <div class="aa-promo-banner">                    
+                      <img src="img/donatepromo.jpg" alt="img">                    
+                      <div class="aa-prom-content">
+                        <h4><a href="selldonate.html">Donate</a></h4>                      
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-7 no-padding">
+                  <div class="aa-promo-right">
+                    <div class="aa-single-promo-right">
+                      <div class="aa-promo-banner">                      
+                        <img src="img/stationeriespromo.jpg" alt="img">                      
+                        <div class="aa-prom-content">
+                          <h4><a href="stationaries.html">Stationaries</a></h4>                        
+                        </div>
+                      </div>
+                    </div>
+                    <div class="aa-single-promo-right">
+                      <div class="aa-promo-banner">                      
+                        <img src="img/electronicspromo.jpg" alt="img">                      
+                        <div class="aa-prom-content">
+                          <h4><a href="electronics.html">Electronics</a></h4>                        
+                        </div>
+                      </div>
+                    </div>
+                    <div class="aa-single-promo-right">
+                      <div class="aa-promo-banner">                      
+                        <img src="img/roomspromo.jpg" alt="img">                      
+                        <div class="aa-prom-content">
+                          <h4><a href="hostelpgrooms.html">Rooms</a></h4>                        
+                        </div>
+                      </div>
+                    </div>
+                    <div class="aa-single-promo-right">
+                      <div class="aa-promo-banner">                      
+                        <img src="img/otherspromo.jpg" alt="img">                      
+                        <div class="aa-prom-content">
+                          <h4><a href="others.html">College</a></h4>                        
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Content -->
+    <section id="aa-product-details">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="aa-product-details-area">
+              <div class="aa-product-details-bottom">
+                <ul class="nav nav-tabs" id="myTab2">
+                  <li><a href="#description" data-toggle="tab">Description</a></li>
+                  <li><a href="#review" data-toggle="tab">Reviews</a></li>                
+                </ul>
+                <!-- Tab panes -->
+                <div class="tab-content">
+                  <div class="tab-pane fade in active" id="description">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <ul>
+                      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod, culpa!</li>
+                      <li>Lorem ipsum dolor sit amet.</li>
+                      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</li>
+                      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor qui eius esse!</li>
+                      <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, modi!</li>
+                    </ul>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, iusto earum voluptates autem esse molestiae ipsam, atque quam amet similique ducimus aliquid voluptate perferendis, distinctio!</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis ea, voluptas! Aliquam facere quas cumque rerum dolore impedit, dicta ducimus repellat dignissimos, fugiat, minima quaerat necessitatibus? Optio adipisci ab, obcaecati, porro unde accusantium facilis repudiandae.</p>
+                  </div>
+                  <div class="" id="review">
+                    <div class="aa-product-review-area" style="overflow: visible;">
+                      <h4>Reviews for College</h4> 
+                      <ul class="aa-review-nav">
+                        <li>
+                          <div class="media">
+                            <div class="media-left">
+                              <!-- <a href="#">
+                                <img class="media-object" src="img/testimonial-img-3.jpg" alt="girl image">
+                              </a> -->
+                            </div>
+                            <div class="media-body">
+                              <h4 class="media-heading"><strong>Marla Jobs</strong> - <span>March 26, 2016</span></h4>
+                              <div class="aa-product-rating">
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star-o"></span>
+                              </div>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            </div>
+                          </div>
+                        </li>
+                        <li>
+                          <div class="media">
+                            <div class="media-left">
+                              <!-- <a href="#">
+                                <img class="media-object" src="img/testimonial-img-3.jpg" alt="girl image">
+                              </a> -->
+                            </div>
+                            <div class="media-body">
+                              <h4 class="media-heading"><strong>Marla Jobs</strong> - <span>March 26, 2016</span></h4>
+                              <div class="aa-product-rating">
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star"></span>
+                                <span class="fa fa-star-o"></span>
+                              </div>
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            </div>
+                          </div>
+                        </li>
+                    </ul>
+                    <h4>Add a review</h4>
+                    <div class="aa-your-rating">
+                      <label for="message">Rating</label>
+                      <a href="#"><span class="fa fa-star-o"></span></a>
+                      <a href="#"><span class="fa fa-star-o"></span></a>
+                      <a href="#"><span class="fa fa-star-o"></span></a>
+                      <a href="#"><span class="fa fa-star-o"></span></a>
+                      <a href="#"><span class="fa fa-star-o"></span></a>
+                    </div>
+                    <!-- review form -->
+                    <form action="" class="aa-review-form">
+                        <div class="form-group">
+                          <label for="message">Your Review</label>
+                          <textarea class="form-control" rows="3" id="message"></textarea>
+                        </div>
+                        <div class="form-group">
+                          <label for="name">Name</label>
+                          <input type="text" class="form-control" id="name" placeholder="Name">
+                        </div>  
+                        <div class="form-group">
+                          <label for="email">Email</label>
+                          <input type="email" class="form-control" id="email" placeholder="example@gmail.com">
+                        </div>
+                        <button type="submit" class="btn btn-default aa-review-submit">Submit</button>
+                      </form>
+                    </div>
+                  </div>            
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>      
+    </section>
+
     <!-- Product Category -->
-    <section id="aa-product-category">
+    <!-- <section id="aa-product-category">
       <div class="container">
         <div class="row">
           <div class="col-lg-9 col-md-9 col-sm-8 col-md-push-3">
@@ -108,7 +273,6 @@
                   <li>
                     <figure>
                       <a class="aa-product-img" href="#"><img src="img/college/uiethoshiarpur.jpg" alt="college img"></a>
-                      <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">UIET Hoshiarpur</a></h4>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
@@ -117,8 +281,7 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="#" alt="college img"></a>
-                      <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
+                      <a class="aa-product-img" href="#"><img src="img/college/uietchandigarh.jpg" alt="college img"></a>
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">UIET Chandigarh</a></h4>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
@@ -127,8 +290,7 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="#" alt="college img"></a>
-                      <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
+                      <a class="aa-product-img" href="#"><img src="img/college/ccet.jpg" alt="college img"></a>
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Chandigarh College of Engineering Technology</a></h4>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
@@ -137,8 +299,7 @@
                   </li>
                   <li>
                     <figure>
-                      <a class="aa-product-img" href="#"><img src="#" alt="college img"></a>
-                      <!-- <a class="aa-add-card-btn" href="login.html"><span class="fa fa-shopping-cart"></span>Buy Now!</a> -->
+                      <a class="aa-product-img" href="#"><img src="img/college/pec.jpg" alt="college img"></a>
                       <figcaption>
                         <h4 class="aa-product-title"><a href="#">Punjab Engineering College</a></h4>
                         <p class="aa-product-descrip">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam accusamus facere iusto, autem soluta amet sapiente ratione inventore nesciunt a, maxime quasi consectetur, rerum illum.</p>
@@ -164,7 +325,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Subscribe Section -->
     <section id="aa-subscribe">
